# my-report

./: .gitignore  README.md  package.json  skills-lock.json
DOCS/: auth-design.md  product-features.md  product-spec-task-driven-ai-assistant.md  test-strategy.md
ai-runtime/: .env.example  .gitignore  pyproject.toml
ai-runtime/.data/: auth.db
ai-runtime/ai_runtime/: __main__.py  graph.py  server.py
ai-runtime/ai_runtime/.data/: auth.db
ai-runtime/ai_runtime/DOCS/: ARCHITECTURE.md
ai-runtime/ai_runtime/application/: auth.py  conversation.py  task.py
ai-runtime/ai_runtime/auth/: __init__.py  models.py  schemas.py  security.py  service.py
ai-runtime/ai_runtime/domain/auth/: entities.py  errors.py  repository.py  services.py
ai-runtime/ai_runtime/domain/conversation/: ports.py
ai-runtime/ai_runtime/domain/task/: __init__.py  entities.py  repository.py
ai-runtime/ai_runtime/infrastructure/: ai_orchestration.py  auth.py  config.py  task.py
ai-runtime/ai_runtime/interfaces/: auth.py  chat.py  health.py  task.py
ai-runtime/tests/: test_application_auth.py  test_auth_api.py  test_chat_api.py  test_domain_auth.py  test_health.py  test_task_api.py
electron-app/: .env.example  .gitignore  .gitleaks.toml  README.md  commitlint.config.mjs  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
electron-app/.github/: dependabot.yml
electron-app/.husky/: pre-commit  pre-push
electron-app/DOC/: cicd.md  code-standards.md  design.md  (+4 more)
(+85 files in other folders)
